@@ -1,0 +1,1 @@
+<html><body>On startup, jEdit restores open buffers, open views and any splits within the views from the previous editing session.</body></html>
