@@ -1,0 +1,4 @@
+<html><body>
+<b>Control</b>-clicking beyond the end of a line inserts the appropriate
+amount of whitespace necessary to position the caret at the clicked location.
+</body></html>
